--- a/.github/workflows/publish_gh_page.yml
+++ b/.github/workflows/publish_gh_page.yml
@@ -13,7 +13,7 @@ on:
 
 defaults:
   run:
-    working-directory: ./jaffle_shop
+    working-directory: jaffle_shop
 
 jobs:
   build_and_deploy_github_pages:
@@ -40,7 +40,7 @@ jobs:
         run: mv ./target/static_index.html ./target/index.html
       
       - name: Push docs folder to github-pages branch.
-        uses: peaceiris/actions-gh-pages@v3
+        uses: peaceiris/actions-gh-pages@v4
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: "./jaffle_shop/target"
