--- a/.github/workflows/publish_gh_page.yml
+++ b/.github/workflows/publish_gh_page.yml
@@ -27,7 +27,7 @@ jobs:
       - name: Setup Python
         uses: actions/setup-python@v5
         with:
-          python-version-file: ".python-version"
+          python-version-file: "jaffle_shop/.python-version"
           cache: pip
 
       - name: Install dependencies
